--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.23.0"
+    "hardhat": "^2.27.0"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.8.0",
+    "@krnl/sdk": "^2.0.0",
+    "@krnl/contracts": "^2.0.0",
     "dotenv": "^16.5.0"
   }
 }
