--- a/accessFront/package.json
+++ b/accessFront/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@krnl-dev/sdk-react-7702": "^0.1.4",
+    "@privy-io/react-auth": "^3.12.0",
     "@rainbow-me/rainbowkit": "^1.3.7",
     "@tanstack/react-query": "^4.36.1",
     "@wagmi/core": "^1.4.13",
